--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -25,7 +25,7 @@ $ms-base:  1rem;
 html{
 
 	font-size: 1.3vw;
-	line-height: 1.5;
+	line-height: 1.6;
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
 
 	//font-size: 16px;
